package com.example.objects.chap1;

public class Bag {

    private Long amount;
    private Invitation invitation;
    private Ticket ticket;

    public boolean hasInvitation() {
        return invitation != null;
    }

    public boolean hasTicket() {
        return ticket != null;
    }

    public void setTicket(Ticket ticket) {
        this.ticket = ticket;
    }

    public void minusAmount(Long amount) {
        this.amount -= amount;
    }

    public void plusAmount(Long amount) {
        this.amount += amount;
    }

    public Bag(Long amount) {
        this(null, amount);
    }

    public Bag(Invitation invation, Long amount) {
        this.invitation = invitation;
        this.amount = amount;
    }

}